# simian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-binaries.yml  release-plz.yml  semantic-pr.yml
git/hooks/: pre-push
src/: cli.rs  device.rs  lib.rs  main.rs  paper.rs  test_indicatif.rs  train.rs  tui.rs
src/data/: mod.rs  plot.rs  splitter.rs
src/data/prep/: mod.rs  polynomial.rs  standard_scaler.rs
src/eval/: mod.rs
src/loss/: bce.rs  mod.rs  mse.rs
src/model/: README.md  mod.rs  plot.rs
src/model/algo/: mod.rs
src/model/algo/linear/: README.md  mod.rs
src/model/algo/logistic/: mod.rs
src/model/algo/polynomial/: README.md  mod.rs
src/optim/: mod.rs
src/optim/sgd/: README.md  mod.rs
src/studio/: mod.rs  sandbox.rs
src/vis/: mod.rs
tests/: integration_tests.rs
tests/fixtures/: test.csv
ui/: eslint.config.js  fix_editor.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/scripts/: screenshot.js
ui/src/: App.css  App.tsx  env.d.ts
ui/src/components/ui/: button.test.tsx  select.tsx  spinner.tsx
ui/src/editor/: content.tsx  context.tsx  extension.tsx  index.tsx  provider.tsx  types.tsx
ui/src/editor/addon/: base.tsx  index.tsx  types.tsx
ui/src/editor/block/: context.tsx  index.tsx  schema.tsx  types.tsx  (+1 more)
ui/src/i18n/: context.tsx  utils.ts
ui/src/pages/: Dashboard.tsx  EditorPage.tsx
(+109 files in other folders)
