[package]
name = "simian"
version = "0.1.2"
edition = "2024"
description = "A command-line tool for exploring and implementing Machine Learning algorithms in Rust."
license = "MIT"
repository = "https://github.com/nosebit/simian"

[dependencies]
anyhow = "1.0.102"
candle-core = "0.10.2"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
hf-hub = "0.5.0"
indicatif = "0.18.4"
plotly = { version = "0.14.1", features = ["kaleido"] }
polars = { version = "0.41", features = ["csv", "parquet", "lazy", "describe"] }
rand = "0.10.1"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
safetensors = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dirs = "5.0.1"
async-stream = "0.3.5"
bytes = "1.5"
open = "5.1.4"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dialoguer = "0.12.0"
slug = "0.1.6"
rust-embed = { version = "8.4.0", features = ["compression"] }
mime_guess = "2.0.4"
chrono = { version = "0.4.45", features = ["serde"] }
headless_chrome = { version = "1.0.22", features = ["fetch"] }

[profile.dev]
# Fix macOS linker warning "__eh_frame section too large"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
anyhow = "1.0.102"
